RESOLVED FIXED39764
[Qt] ScrollbarThemeQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=39764
Summary [Qt] ScrollbarThemeQt.cpp has coding-style errors
Anders Bakken
Reported 2010-05-26 13:28:10 PDT
WebCore/platform/qt/ScrollbarThemeQt.cpp:35: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/ScrollbarThemeQt.cpp:42: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/ScrollbarThemeQt.cpp:59: A case label should not be indented, but line up with its switch statement. [whitespace/indent] [4] WebCore/platform/qt/ScrollbarThemeQt.cpp:81: A case label should not be indented, but line up with its switch statement. [whitespace/indent] [4] WebCore/platform/qt/ScrollbarThemeQt.cpp:125: Boolean expressions that span multiple lines should have their operators on the left side of the line instead of the right side. [whitespace/operators] [4] WebCore/platform/qt/ScrollbarThemeQt.cpp:126: Boolean expressions that span multiple lines should have their operators on the left side of the line instead of the right side. [whitespace/operators] [4] Total errors found: 6 in 1 files
Attachments
Patch that fixes the coding style issues (4.55 KB, patch)
2010-05-26 14:35 PDT, Anders Bakken
no flags
Patch (4.67 KB, patch)
2010-06-04 18:44 PDT, Anders Bakken
no flags
Anders Bakken
Comment 1 2010-05-26 14:35:28 PDT
Created attachment 57144 [details] Patch that fixes the coding style issues
Petri Ojala
Comment 2 2010-05-26 21:43:31 PDT
QtTriaged
David Levin
Comment 3 2010-05-27 11:20:09 PDT
Comment on attachment 57144 [details] Patch that fixes the coding style issues > No new tests. (OOPS!) Ditto.
Anders Bakken
Comment 4 2010-06-04 18:44:34 PDT
Eric Seidel (no email)
Comment 5 2010-06-04 22:01:35 PDT
Comment on attachment 57939 [details] Patch LGTM.
WebKit Commit Bot
Comment 6 2010-06-04 23:07:17 PDT
Comment on attachment 57939 [details] Patch Clearing flags on attachment: 57939 Committed r60737: <http://trac.webkit.org/changeset/60737>
WebKit Commit Bot
Comment 7 2010-06-04 23:07:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.