2010-06-04  Anders Bakken  <agbakken@gmail.com>

Reviewed by Eric Seidel.

        [Qt] ScrollbarThemeQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=39764

        * platform/qt/ScrollbarThemeQt.cpp:
        (WebCore::scPart):
        (WebCore::scrollbarPart):
        (WebCore::styleOptionSlider):

Canonical link: https://commits.webkit.org/51760@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60737 268f45cc-cd09-0410-ab3c-d52691b4dbfc